Add Minecraft/ATLauncher setup